# signalist

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: release.yml
signalist/: index.html  package-lock.json  package.json
signalist/src/: App.vue  main.ts  messengerCatalog.ts  style.css
signalist/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
signalist/src-tauri/capabilities/: default.json  messenger-ipc.json
signalist/src-tauri/icons/: icon.icns
signalist/src-tauri/inject/: shortcut.js  telegram.js  whatsapp.js
signalist/src-tauri/permissions/: allow-messenger-commands.toml  allow-open-in-browser.toml  allow-update-sidebar-theme.toml  allow-update-unread-count.toml
signalist/src-tauri/src/: lib.rs  main.rs
